--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -6,6 +6,13 @@
 </head>
 
 {% block content %}
+
+{% if message  %}
+<div class="alert alert-secondary" role="alert">
+    <p>{{ message }}</p>
+</div>
+{% endif %}
+
 <body>
 <div class="main-body">
     <h1>Welcome to Login</h1>
@@ -14,26 +21,24 @@
 <div class="wrapper fadeInDown">
     <div id="formContent">
         <!-- Tabs -->
-        <h2 class="active">Sign In</h2>
+        <h2 class="active">Login</h2>
         <a href="{{ url_for('signup') }}"><h2 class="inactive underlineHover">Sign Up</h2></a>
 
         <!-- Icon -->
         <div class="fadeIn first">
-            <img src="../static/assets/user.png" id="icon" alt="User Icon"/>
+            <img src="../static/assets/user.png" id="icon" alt="User Icon" width="150" height="150"/>
         </div>
 
         <!-- Login Form -->
-        <form action="/result" method="POST">
-            <input type="email" id="login" class="fadeIn second" name="email" placeholder="email">
-            <input type="password" id="password" class="fadeIn third" name="pass" placeholder="password">
+        <form action="" method="post">
+            <div class="form-group">
+                <input type="email" name="email" class="fadeIn second form-control" id="InputEmail" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+                <input type="password" name="password" class="fadeIn third form-control" id="InputPassword" placeholder="Password">
+            </div>
             <input type="submit" class="fadeIn fourth" value="Log In">
         </form>
-        <!--
-            TODO: Will add in future
-            <div id="formFooter">
-              <a class="underlineHover" href="#">Forgot Password?</a>
-            </div>
-         -->
     </div>
 </div>
 </body>
