--- a/flaskr/templates/signup.html
+++ b/flaskr/templates/signup.html
@@ -1,38 +1,55 @@
 {% extends "base.html" %}
 {% set active_page = "signup" %}
 
+<!-- TODO: Signup doesn't keep you logged in -->
 <head>
     <h1>{% block title %}Signup{% endblock %}</h1>
 </head>
 
 {% block content %}
 <body>
+
+{% if message %}
+<div class="alert alert-secondary" role="alert">
+    <p>{{ message }}</p>
+</div>
+{% endif %}
+
 <div class="main-body">
     <h1>Welcome to Signup</h1>
-    <p>Welcome to the main page of my app</p>
 </div>
 
 <div class="wrapper fadeInDown">
     <div id="formContent">
         <!-- Tabs -->
-        <a href="{{ url_for('login') }}"><h2 class="inactive underlineHover">Sign In</h2></a>
-        <h2 class="active">Sign Up </h2>
+        <a href="{{ url_for('login') }}"><h2 class="inactive underlineHover">Login</h2></a>
+        <h2 class="active">Sign Up</h2>
 
         <!-- Icon -->
         <div class="fadeIn first">
-            <img src="../static/assets/user.png" id="icon" alt="User Icon"/>
+            <img src="../static/assets/user.png" id="icon" alt="User Icon" width="150" height="150"/>
         </div>
 
-        <!-- Login Form -->
-        <form action="/register" method="POST">
-            <input type="text" id="name" class="fadeIn second" name="name" placeholder="name">
-            <input type="email" id="login" class="fadeIn second" name="email" placeholder="email">
-            <input type="password" id="password" class="fadeIn third" name="pass" placeholder="password">
-            <input type="password" id="confirmPassword" class="fadeIn third" name="confPass"
-                   placeholder="Confirm password">
+        <!-- Sign up Form -->
+        <form action="" method="post">
+            <div class="form-group">
+                <input type="text" name="fullname" class="fadeIn second form-control" id="inputFullName"
+                       aria-describedby="emailHelp" placeholder="Enter full name">
+            </div>
+            <div class="form-group">
+                <input type="email" name="email" class="fadeIn second form-control" id="InputEmail"
+                       placeholder="Enter email">
+            </div>
+            <div class="form-group">
+                <input type="password" name="password1" class="fadeIn third form-control" id="InputPassword"
+                       placeholder="Password">
+            </div>
+            <div class="form-group">
+                <input type="password" name="password2" class="fadeIn third form-control" id="InputPassword2"
+                       placeholder="Repeat Password">
+            </div>
             <input type="submit" class="fadeIn fourth" value="Sign Up">
         </form>
-
     </div>
 </div>
 </body>
