--- a/flaskr/templates/signup.html
+++ b/flaskr/templates/signup.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% set active_page = "signup" %}
 
-<!-- TODO: Signup doesn't keep you logged in -->
+<!-- TODO: Signup doesn't keep you logged in. Run login? Refresh? -->
+
 <head>
     <h1>{% block title %}Signup{% endblock %}</h1>
 </head>
